增加白龙量化

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
     <div class="container">
         <h1 class="title">我的量化投资项目</h1>
-        <h2 class="subtitle">用人工智能来分析和预测股市走势</h2>
+        <h2 class="subtitle">白龙量化-用人工智能来分析和预测股市走势</h2>
         <nav class="nav">
             <ul>
                 <li><a href="progress.html">项目进展</a></li>
