--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>白龙量化 - 用人工智能来分析和预测股市走势</title>
+    <meta name=“description” content=“白龙量化是一个利用必应人工智能服务来构建量化投资系统的项目，它可以根据历史数据和实时数据，分析和预测股市的走势，给出买卖建议。”> 
     <style>
         * {
             box-sizing: border-box;
@@ -78,6 +80,7 @@
             color: #666;
         }
     </style>
+    <script type="application/ld+json"> { "@context": "https://schema.org", "@type": "WebPage", "name": "白龙量化 - 用人工智能来分析和预测股市走势", "description": "白龙量化是一个利用必应人工智能服务来构建量化投资系统的项目，它可以根据历史数据和实时数据，分析和预测股市的走势，给出买卖建议。", "url": "https://example.com", "image": "https://example.com/AAPL_2023-06-16_01-26-14.png", "author": { "@type": "Person", "name": "白龙" }, "datePublished": "2023-06-16", "dateModified": "2023-06-16" } </script>
 </head>
 <body>
     <div class="container">
@@ -97,7 +100,7 @@
             <div class="text">
                 <p>量化投资是一种利用数学模型和计算机技术来进行投资决策的方法。它可以帮助投资者在复杂和不确定的市场环境中找到优势和机会，提高收益和降低风险。</p>
                 <p>我使用了必应的人工智能服务，来构建一个量化投资系统，它可以根据历史数据和实时数据，分析和预测股市的走势，给出买卖建议。我使用了深度学习，自然语言处理，机器视觉等技术，来处理和理解各种数据源，如股票价格，新闻，社交媒体，财报等。</p>
-                <p>我的量化投资项目目前还在测试阶段，但是已经取得了一些令人满意的结果。如果你对我的项目感兴趣，或者想要了解更多关于量化投资和人工智能的知识，请联系我。</p>
+                <p>我的量化投资项目目前还在测试阶段，但是已经取得了一些令人满意的结果。如果你对我的项目感兴趣，或者想要了解更多关于量化投资和人工智能的知识，<a href="contact.html">联系我</a>。</p>
             </div>
         </div>
     </div>
