--- a/progress-2023-06-23.html
+++ b/progress-2023-06-23.html
@@ -120,7 +120,7 @@
             </ul>
         </nav>
         <div class="content">
-            <article> <h1>项目进展：第八周</h1> 
+            <article> <h1>项目进展：自启动以来</h1> 
                 <p>量化投资是一种基于数学模型和计算机技术的投资方式，目的是通过系统化的方法寻找市场上的投资机会，并实现稳定的收益。本项目旨在开发一个量化交易系统，从数据获取、数据处理、策略开发、策略回测、策略优化、策略执行等方面实现量化投资的全流程。</p>
                 <p>本项目自启动以来，已经完成了以下几个方面的工作：</p>
                 <ul> 
