--- a/progress-2023-06-23.html
+++ b/progress-2023-06-23.html
@@ -128,7 +128,7 @@
                     <li>数据预处理系统的开发。该系统可以实现数据的自动化备份，以防止数据丢失或损坏。同时，该系统可以自动化地拉取并持久化A股三大指数（上证综指、深证成指、创业板指）及申万二级指数（包括28个行业指数）的历史数据和实时数据，为后续的策略开发提供数据支持。此外，该系统还可以对数据进行预处理，计算出各种技术指标，如复权价格、移动平均线、周月涨跌幅等，方便后续的策略分析。</li>
                     <img src="data_process.jpg" alt="数据预处理系统的架构图">
                     <li>基于chatgpt的聊天机器人的开发。该机器人可以与用户进行自然语言交流，回答用户关于量化投资的相关问题，如基本概念、常用方法、市场情况等。该机器人还可以根据用户的需求，提供相应的量化投资建议，如选股、择时、仓位管理等。该机器人使用了chatgpt模型作为核心，该模型是一种基于Transformer架构的预训练语言模型，可以生成流畅且有逻辑的文本。</li>
-                    <video src="chatbot_demo.mp4" controls width="600" height="400" alt="聊天机器人与用户交流的视频">
+                    <video src="chatbot_demo.mp4" controls width="100%" height="auto" alt="聊天机器人与用户交流的视频" style="max-width: 600px;">
                     <li>项目网站的上线。该网站是本项目的展示平台，用户可以通过网站了解本项目的背景、目标、进展、成果等信息。同时，用户也可以通过网站与聊天机器人进行交互，获取量化投资相关的知识和建议。该网站由必应根据项目要求写的纯静态网站，舍去了复杂的UI设计，采用了最简单的静态页面，目的是以最快的速度上线网站。目前网站托管在免费的github page页面上。</li> 
                     <img src="website_screenshot.jpg" alt="项目网站的截图">   
                 </ul>
